se  hicieron correciones